@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.704 2013/07/11 10:40:28 wiz Exp $
+# $NetBSD: Makefile,v 1.705 2013/07/11 10:42:55 wiz Exp $
 #
 
 COMMENT=	Packages to support the X window system
@@ -642,7 +642,6 @@ SUBDIR+=	xscript
 SUBDIR+=	xsel
 SUBDIR+=	xservers
 SUBDIR+=	xset
-SUBDIR+=	xsetmode
 SUBDIR+=	xsetroot
 SUBDIR+=	xsm
 SUBDIR+=	xsnow
