@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.1.1.1 2007/04/10 13:47:12 joerg Exp $
-
-SHA1 (xsetmode-1.0.0.tar.bz2) = add4e6a91c9d0e7d1a80b3534c64d6b7bf633ea0
-RMD160 (xsetmode-1.0.0.tar.bz2) = 40088c9246a6d67e8d3c759151077fb3cb7dd7a6
-Size (xsetmode-1.0.0.tar.bz2) = 73757 bytes
